--- a/client/assets/css/design.css
+++ b/client/assets/css/design.css
@@ -2,3 +2,8 @@
 	margin: 0;
 	padding: 0;
 }
+
+html {
+	background: url('../img/background.jpg') no-repeat center center fixed;
+	background-size: cover;
+}
