--- a/client/assets/css/design.css
+++ b/client/assets/css/design.css
@@ -2,8 +2,64 @@
 	margin: 0;
 	padding: 0;
 }
+*, *:after, *:before {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+textarea, input, button {
+	outline: none;
+}
+
+html, input, textarea, button {
+	font: 100%/1.5em 'Noto Sans', sans-serif;
+}
+
+a {
+	color: #cc333f;
+}
 
 html {
 	background: url('../img/background.jpg') no-repeat center center fixed;
 	background-size: cover;
+	color: white;
+}
+
+#homepage {
+	background: rgba(0,0,0,0.5);
+	border-radius: 6px;
+	box-shadow:inset 0 0 8px rgba(0,0,0,0.5);
+	margin: 10% auto 0;
+	padding: 6%;
+	width: 50%;
+}
+	#homepage h1 {
+		font-size: 3em;
+		margin-bottom: 0.8em;
+		text-align: center;
+	}
+	#homepage p {
+		margin-bottom: 0.4em;
+	}
+	#homepage form {
+		margin-top: 1.2em;
+	}
+		#homepage form input, #homepage form button {
+			background: rgba(0,0,0,0.5);
+			border: none;
+			color: white;
+			display: block;
+			margin-bottom: 0.4em;
+			padding: 10px 20px;
+			width: 100%;
+		}
+
+
+@media screen and (max-width: 600px) {
+
+	#homepage {
+		width: 80%;
+	}
+
 }
