Hooked together chat window

--- a/client/assets/templates/chat.ejs
+++ b/client/assets/templates/chat.ejs
@@ -9,8 +9,7 @@
 	</div>
 
 	<form>
-		<textarea></textarea>
-		<button type="submit">Send</button>
+		<input placeholder="Message.." />
 	</form>
 
 </div>
