--- a/client/assets/templates/homepage.ejs
+++ b/client/assets/templates/homepage.ejs
@@ -4,11 +4,12 @@
 
 <div id="homepage">
 
-	<h1>Chat.js</h1>
+	<h1>Chatting</h1>
 	<p>A web application allowing locally encrypted chatting, messages are not stored on a server.</p>
-	<p>Enter an email, used to display a <a href="http://en.gravatar.com/">Gravatar</a>. And a passphrase (the people you are chatting to must use the same passphrase) the passphrase is used to encrypt your messages.</p>
+	<p>Enter a name and email, used to display a <a href="http://en.gravatar.com/">Gravatar</a>. And a passphrase (the people you are chatting to must use the same passphrase) the passphrase is used to encrypt your messages.</p>
 
 	<form>
+		<input id="name" placeholder="Display name" />
 		<input id="email" placeholder="Gravatar email" />
 		<input id="passphrase" placeholder="Encryption passphrase" />
 		<button type="submit">Login</button>
