--- a/client/assets/templates/homepage.ejs
+++ b/client/assets/templates/homepage.ejs
@@ -11,7 +11,7 @@
 	<form>
 		<input id="name" placeholder="Display name" />
 		<input id="email" placeholder="Gravatar email" />
-		<input id="passphrase" placeholder="Encryption passphrase" />
+		<input id="passphrase" placeholder="Encryption passphrase" value="<%= passphrase %>" />
 		<button type="submit">Login</button>
 	</form>
 
