--- a/public/assets/sass/design.scss
+++ b/public/assets/sass/design.scss
@@ -27,25 +27,29 @@ html {
 }
 
 #homepage {
+
 	background: rgba(0,0,0,0.5);
 	border-radius: 6px;
 	box-shadow:inset 0 0 8px rgba(0,0,0,0.5);
 	margin: 10% auto;
 	padding: 6%;
 	width: 50%;
-}
-	#homepage h1 {
+
+	h1 {
 		font-size: 3em;
 		margin-bottom: 0.8em;
 		text-align: center;
 	}
-	#homepage p {
+
+	p {
 		margin-bottom: 0.4em;
 	}
-	#homepage form {
+
+	form {
+
 		margin-top: 1.2em;
-	}
-		#homepage form input, #homepage form button {
+
+		input, button {
 			background: rgba(0,0,0,0.5);
 			border: none;
 			color: white;
@@ -55,10 +59,18 @@ html {
 			width: 100%;
 		}
 
-#conversation {
-	
+	}
+
+	@media screen and (max-width: 600px) {
+		width: 80%;
+	}
+
 }
-	#conversation #users {
+
+#conversation {
+
+	#users {
+
 		background: rgba(0,0,0,0.25);
 		border-radius: 4px;
 		list-style: none;
@@ -66,59 +78,85 @@ html {
 		position: fixed;
 		right: 10px;
 		top: 10px;
-	}
-		#conversation #users li {
+
+		li {
+
 			margin-top: 5px;
-		}
-			#conversation #users li img {
+
+			img {
 				border-radius: 0.5em;
 				float: left;
 				height: 1em;
 				margin: 4px 8px 0 0;
 			}
-	#conversation #messages {
+
+		}
+
+		@media screen and (max-width: 600px) {
+			display: none;
+		}
+
+	}
+
+	#messages {
+
 		margin-bottom: 50px;
 		padding: 6%;
-	}
-		#conversation #messages > div {
+
+		> div {
+
 			margin-top: 15px;
 			overflow: hidden;
-		}
-			#conversation #messages > div div.user {
+
+			div.user {
+
 				float: left;
 				width: 8%;
-			}
-				#conversation #messages > div div.user img {
+
+				img {
 					border-radius: 50%;
 					display: block;
 					width: 100%;
 				}
-				#conversation #messages > div div.user h5 {
+
+				h5 {
 					height: 2em;
 					overflow: hidden;
 					text-align: center;
 				}
-			#conversation #messages > div p {
+
+			}
+
+			p {
+
 				background: rgba(0,0,0,0.25);
 				border-radius: 6px;
 				float: left;
 				margin-left: 2%;
 				padding: 12px 20px;
 				max-width: 80%;
-			}
-				#conversation #messages > div p strong {
+
+				strong {
 					font-size: 0.8em;
 					opacity: 0.75;
 				}
-	#conversation form {
+
+			}
+
+		}
+
+	}
+
+	form {
+
 		background: green;
 		bottom: 0;
 		height: 50px;
 		left: 0;
 		position: fixed;
 		right: 0;
-	}
-		#conversation form input {
+
+		input {
 			background: white;
 			border: none;
 			height: 100%;
@@ -126,15 +164,6 @@ html {
 			width: 100%;
 		}
 
-
-@media screen and (max-width: 600px) {
-
-	#homepage {
-		width: 80%;
-	}
-
-	#conversation #users {
-		display: none;
 	}
 
 }
