--- a/public/assets/sass/app.scss
+++ b/public/assets/sass/app.scss
@@ -33,6 +33,23 @@ body {
 	overflow: auto;
 }
 
+div.loading {
+
+	background: rgba(0,0,0,0.5) url('../img/loading.svg') no-repeat center center;
+	background-size: 10%;
+	bottom: 0;
+	left: 0;
+	position: fixed;
+	right: 0;
+	top: 0;
+	transition: opacity .25s ease-in-out;
+
+	&.inactive {
+		opacity: 0;
+	}
+
+}
+
 #chat {
 	height: 100%;
 }
