--- a/public/assets/sass/app.scss
+++ b/public/assets/sass/app.scss
@@ -1,199 +1,155 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-*, *:after, *:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
-textarea, input, button {
-	outline: none;
-}
-
-html, input, textarea, button {
-	font: 100%/1.5em 'Noto Sans', sans-serif;
-}
-
-a {
-	color: #cc333f;
-}
+@import 'colours';
+@import 'reset';
+@import 'type';
 
 html {
-	background: url('../img/background.jpg') no-repeat center center fixed;
-	background-size: cover;
-	color: white;
+	background-image: radial-gradient(circle, rgba(white, 0.20), rgba(white, 0)), linear-gradient(45deg, hsl(($colour-purple-hue + 5), 65, 55) 0, hsl(($colour-purple-hue + 5), 65, 55) 100%);
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	box-sizing: border-box;
 	height: 100%;
 	overflow: hidden;
 }
 
 body {
 	height: 100%;
-	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 div.loading {
 
-	background: rgba(0,0,0,0.5) url('../img/loading.svg') no-repeat center center;
+	background: rgba(black, 0.5) url('../img/loading.svg') no-repeat center center;
 	background-size: 10%;
 	bottom: 0;
+	display: none;
 	left: 0;
+	opacity: 0;
 	position: fixed;
 	right: 0;
 	top: 0;
 	transition: opacity .25s ease-in-out;
 
-	&.inactive {
-		opacity: 0;
+	&.active {
+		opacity: 1;
 	}
 
 }
 
 #chat {
-	height: 100%;
-}
 
-#homepage {
+	&[template=login] {
 
-	background: rgba(0,0,0,0.5);
-	border-radius: 6px;
-	box-shadow:inset 0 0 8px rgba(0,0,0,0.5);
-	margin: 10% auto;
-	padding: 6%;
-	width: 50%;
-
-	h1 {
-		font-size: 3em;
-		margin-bottom: 0.8em;
-		text-align: center;
-	}
-
-	p {
-		margin-bottom: 0.4em;
-	}
-
-	form {
-
-		margin-top: 1.2em;
-
-		input, button {
-			background: rgba(0,0,0,0.5);
-			border: none;
-			color: white;
-			display: block;
-			margin-bottom: 0.4em;
-			padding: 10px 20px;
-			width: 100%;
-		}
-
-	}
-
-	@media screen and (max-width: 600px) {
-		width: 80%;
-	}
-
-}
-
-#conversation {
-
-	height: 100%;
-
-	#users {
-
-		background: rgba(0,0,0,0.25);
-		border-radius: 4px;
-		list-style: none;
-		padding: 0 15px 5px;
-		position: fixed;
-		right: 10px;
-		top: 10px;
-
-		li {
-
-			margin-top: 5px;
-
-			img {
-				border-radius: 0.5em;
-				float: left;
-				height: 1em;
-				margin: 4px 8px 0 0;
-			}
-
-		}
+		background: rgba(black, 0.25);
+		border-radius: 5px;
+		box-shadow: inset 0 0 12px rgba(black, 0.15);
+		margin: 10% auto;
+		padding: 5%;
+		width: 50%;
 
 		@media screen and (max-width: 600px) {
-			display: none;
+			width: 80%;
+		}
+
+		h1 {
+			font-size: 3em;
+			margin-bottom: 0.8em;
+			text-align: center;
+		}
+
+		p {
+			margin-bottom: 0.4em;
+		}
+
+		form {
+
+			margin-top: 1.2em;
+
+			input, button {
+				background: rgba(black, 0.5);
+				border-radius: 3px;
+				margin-bottom: 0.5em;
+				padding: 0.5em 1em;
+			}
+
 		}
 
 	}
 
-	#messages {
+	&[template=chat] {
 
-		height: calc(100% - 50px);
-		margin-bottom: 50px;
-		overflow: auto;
-		padding: 6%;
+		height: 100%;
 
-		> div {
+		ul.users {
 
-			margin-top: 15px;
-			overflow: hidden;
+			background: rgba(0,0,0,0.25);
+			border-radius: 4px;
+			list-style: none;
+			padding: 0 0.5em 0.25em;
+			position: fixed;
+			right: 0.5em;
+			top: 0.5em;
 
-			div.user {
+			@media screen and (max-width: 600px) {
+				display: none;
+			}
 
-				float: left;
-				width: 8%;
+			li {
+				margin-top: 0.25em;
+			}
 
-				img {
-					border-radius: 50%;
+		}
+
+		div.messages {
+
+			height: calc(100% - 50px);
+			margin-bottom: 50px;
+			overflow: auto;
+			padding: 5%;
+
+			div.message {
+
+				margin-top: 1em;
+
+				span.meta {
+
 					display: block;
-					width: 100%;
+
+					span.date {
+						font-size: 0.85em;
+					}
+
 				}
 
-				h5 {
-					height: 2em;
-					overflow: hidden;
-					text-align: center;
-				}
-
-			}
-
-			p {
-
-				background: rgba(0,0,0,0.25);
-				border-radius: 6px;
-				float: left;
-				margin-left: 2%;
-				padding: 12px 20px;
-				max-width: 80%;
-
-				strong {
-					font-size: 0.8em;
-					opacity: 0.75;
+				p {
+					background: rgba(black, 0.25);
+					border-radius: 5px;
+					display: inline-block;
+					padding: 0.75em 1.25em;
+					max-width: 80%;
 				}
 
 			}
 
 		}
 
-	}
+		form {
 
-	form {
+			bottom: 0;
+			height: 50px;
+			left: 0;
+			position: fixed;
+			right: 0;
 
-		background: green;
-		bottom: 0;
-		height: 50px;
-		left: 0;
-		position: fixed;
-		right: 0;
+			input {
+				background: white;
+				border: none;
+				color: black;
+				height: 100%;
+				padding: 0.75em 1em;
+				width: 100%;
+			}
 
-		input {
-			background: white;
-			border: none;
-			height: 100%;
-			padding: 10px 20px;
-			width: 100%;
 		}
 
 	}
