--- a/scss/app.scss
+++ b/scss/app.scss
@@ -22,6 +22,7 @@ html {
     background: url('/img/background.jpg') no-repeat center center fixed;
     background-size: cover;
     color: white;
+    min-height: 100%;
 }
 
 @import 'loading';
